Clean up the github commit links