@@ -1,6 +1,5 @@
-package secondbrain.domain.tools;
+package secondbrain.domain.tools.smoketest;
 
-import com.google.common.collect.ImmutableList;
 import jakarta.enterprise.context.Dependent;
 import secondbrain.domain.tooldefs.Tool;
 import secondbrain.domain.tooldefs.ToolArgs;
@@ -13,23 +12,20 @@ import java.util.Map;
  * A tool that returns a greeting message.
  */
 @Dependent
-public class HelloWorld implements Tool {
+public class SmokeTest implements Tool {
     @Override
     public String getName() {
-        return HelloWorld.class.getSimpleName();
+        return SmokeTest.class.getSimpleName();
     }
 
     @Override
     public String getDescription() {
-        return "Returns a greeting message";
+        return "Used for smoke testing";
     }
 
     @Override
     public List<ToolArguments> getArguments() {
-        return ImmutableList.of(new ToolArguments(
-                "greeting",
-                "The greeting to display",
-                "World"));
+        return List.of();
     }
 
     @Override
@@ -37,10 +33,6 @@ public class HelloWorld implements Tool {
             final Map<String, String> context,
             final String prompt,
             final List<ToolArgs> arguments) {
-        if (arguments.size() != 1) {
-            return "Hello, World!";
-        }
-
-        return arguments.getFirst().argValue();
+        return "Test succeeded!";
     }
 }
